@@ -1,3 +1,8 @@
+2003-12-06  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* mime-play.el 	(mime-require-safe-directory): New function.
+	(mime-store-message/partial-piece): Use it.
+
 2003-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mime-play.el (mime-store-message/partial-piece): Fix
